# mcp-reminders

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/mcp_reminders/: models.py  reminders.py  server.py
